--- a/2019.10.11/原型、原型链.html
+++ b/2019.10.11/原型、原型链.html
@@ -56,11 +56,11 @@
    Function.prototype.a=50;
    let f=new Fn();
    f.a=40;
-   console.log(f.a);//30
-   //console.log(Fn.prototype.a)
+   console.log(f.a);//40
+   //console.log(Fn.prototype.a);//50
    //Fn
-   //cosole.log(window.a);
-   //console.log(Fn.a);
+   //cosole.log(window.a);//10
+   //console.log(Fn.a);//30
 
 
 
