--- a/2019.11.02/练习/百度音乐/index.html
+++ b/2019.11.02/练习/百度音乐/index.html
@@ -68,7 +68,7 @@
 		let selectAll = document.querySelector('.select').getElementsByTagName('input')[0];
 
 		selectAll.onOff = true;
-		let colorAry = ['grey','pink'];
+		let colorAry = ['grey','orange'];
 		let allNum = 0;
 		for (let i = 0; i < lis.length; i++) {
 			lis[i].index = i;
