--- a/2019.11.20/瀑布/index.html
+++ b/2019.11.20/瀑布/index.html
@@ -22,7 +22,7 @@
             <li></li>
         </ul>
     </div>
-    <div id="loading"><img width="250" src="./img/timg.gif"></div>
+    <!-- <div id="loading"><img width="250" src="./img/timg.gif"></div> -->
 <script src="./js_plus/index.js"></script>
 </body>
 </html>
